# Richman

./: .$大富翁流程图.drawio.bkp  .$大富翁流程图.drawio.dtmp  CMakeLists.txt  Richman.pro  bank.cpp  bank.h  chancetile.cpp  chancetile.h  characterselectiongroupbox.cpp  characterselectiongroupbox.h  characterselectionwidget.cpp  characterselectionwidget.h  characterselectionwidget.ui  communitychesttile.cpp  communitychesttile.h  companytile.cpp  companytile.h  countrytile.cpp  countrytile.h  dice.cpp  dice.h  gameboardwidget.cpp  gameboardwidget.h  gameboardwidget.ui  gamemanager.cpp  gamemanager.h  gameview.cpp  gameview.h  jailtile.cpp  jailtile.h  mainwindow.cpp  mainwindow.h  map.cpp  map.h  mypushbutton.cpp  mypushbutton.h  player.cpp  player.h  playeravatarselectiondialog.cpp  playeravatarselectiondialog.h  (+20 more)
resource/qss/: style.qss
